Adding Tasks model on core app and working in signals

--- a/devteamtask/templates/pages/about.html
+++ b/devteamtask/templates/pages/about.html
@@ -1,1 +1,8 @@
 {% extends "base.html" %}
+
+{% block content %}
+<h1>DevTeamTask v1.0</h1>
+<p>A managemente task software for development team</p>
+<p>Made with Django and React/NextJS</p>
+<p>By Talismar F. C.</p>
+{% endblock content %}
