--- a/devteamtask/templates/pages/home.html
+++ b/devteamtask/templates/pages/home.html
@@ -1,1 +1,18 @@
 {% extends "base.html" %}
+
+{% block content %}
+<h1>Welcome DevTeamTask API</h1>
+
+<p>A managemente task software for development team</p>
+
+<h2>Documentation API</h2>
+
+<ul>
+  <li>
+    <a href="/api/docs">Swagger Docs</a>
+  </li>
+  <li>
+    <a href="/api/redoc">Redoc Docs</a>
+  </li>
+</ul>
+{% endblock content %}
